--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,16 @@
 # Harvester API endpoint
-endpoint: 'https://localhost:30443'
+#endpoint: 'https://localhost:30443'
+endpoint: "https://192.168.0.131"
 
 # Harvester username
-username: 'admin'
+username: "admin"
 
 # Harvester password
-password: 'password1234'
+password: "password1234"
 
 # To access Harvester node, fill in one of following is enough.
-host-password: ''
-host-private-key: ''
+host-password: ""
+host-private-key: ""
 
 # Do not cleanup the test artifacts
 do-not-cleanup: False
@@ -21,7 +22,10 @@ harvester_cluster_nodes: 3
 vlan-id: 1
 
 # Physical NIC for VLAN. Default is "harvester-mgmt"
-vlan-nic: 'harvester-mgmt'
+vlan-nic: "ens5"
+
+# VLAN CIDR, indicate the vlan network subnet range"
+vlan-cidr: "192.168.121.0/24"
 
 # Wait time for polling operations
 wait-timeout: 600
@@ -29,31 +33,31 @@ wait-timeout: 600
 # Sleep time for polling operations
 sleep-timeout: 3
 
-node-scripts-location: 'scripts/vagrant'
+node-scripts-location: "scripts/vagrant"
 
 # URL to download the Windows image
-win-image-url: ''
+win-image-url: ""
 opensuse-image-url: https://download.opensuse.org/repositories/Cloud:/Images:/Leap_15.3/images/openSUSE-Leap-15.3.x86_64-NoCloud.qcow2
 # URL to download all images
-image-cache-url: ''
+image-cache-url: ""
 
-terraform-scripts-location: 'terraform_test_artifacts'
+terraform-scripts-location: "terraform_test_artifacts"
 
 # Backup Target S3
-region: ''
-accessKeyId: ''
-secretAccessKey: ''
-bucketName: ''
+region: ""
+accessKeyId: ""
+secretAccessKey: ""
+bucketName: ""
 
 # Backup Targer NFS
-nfs-endpoint: ''
+nfs-endpoint: ""
 
-nfs-mount-dir: 'nfsshare'
+nfs-mount-dir: "nfsshare"
 
-backup-scripts-location: 'backup_restore_test_artifacts'
+backup-scripts-location: "backup_restore_test_artifacts"
 
 # Rancher Docker image version to use
-rancher-version: 'v2.6-head'
+rancher-version: "v2.6-head"
 
 # External Rancher endpoint
 #rancher-endpoint: 'https://127.0.0.1'
@@ -62,7 +66,7 @@ rancher-version: 'v2.6-head'
 #rancher-admin-password: 'rancher_password'
 
 # Kubernetes version to use for Rancher integration tests
-kubernetes-version: 'v1.24.8+rke2r1'
+kubernetes-version: "v1.24.8+rke2r1"
 
 # Wait time for polling Rancher cluster status.
 rancher-cluster-wait-timeout: 7200
