--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,12 @@
 # Harvester API endpoint
 #endpoint: 'https://localhost:30443'
-endpoint: "https://192.168.0.131"
+endpoint: 'https://10.84.132.32'
 
 # Harvester username
-username: "admin"
+username: 'admin'
 
 # Harvester password
-password: "password1234"
+password: 'password1234'
 
 # To access Harvester node, fill in one of following is enough.
 host-password: ""
@@ -19,13 +19,14 @@ do-not-cleanup: False
 harvester_cluster_nodes: 3
 
 # VLAN ID, will invoke the tests depended on external networking if not set to -1.
-vlan-id: 1
+vlan-id: 1216
 
 # Physical NIC for VLAN. Default is "harvester-mgmt"
-vlan-nic: "ens5"
+#vlan-nic: 'harvester-mgmt'
+vlan-nic: 'ens1f1'
 
 # VLAN CIDR, indicate the vlan network subnet range"
-vlan-cidr: "192.168.121.0/24"
+vlan-cidr: '10.84.99.0/24'
 
 # Wait time for polling operations
 wait-timeout: 600
@@ -33,31 +34,31 @@ wait-timeout: 600
 # Sleep time for polling operations
 sleep-timeout: 3
 
-node-scripts-location: "scripts/vagrant"
+node-scripts-location: 'scripts/vagrant'
 
 # URL to download the Windows image
-win-image-url: ""
+win-image-url: ''
 opensuse-image-url: https://download.opensuse.org/repositories/Cloud:/Images:/Leap_15.3/images/openSUSE-Leap-15.3.x86_64-NoCloud.qcow2
 # URL to download all images
-image-cache-url: ""
+image-cache-url: ''
 
-terraform-scripts-location: "terraform_test_artifacts"
+terraform-scripts-location: 'terraform_test_artifacts'
 
 # Backup Target S3
-region: ""
-accessKeyId: ""
-secretAccessKey: ""
-bucketName: ""
+region: ''
+accessKeyId: ''
+secretAccessKey: ''
+bucketName: ''
 
 # Backup Targer NFS
-nfs-endpoint: ""
+nfs-endpoint: ''
 
-nfs-mount-dir: "nfsshare"
+nfs-mount-dir: 'nfsshare'
 
-backup-scripts-location: "backup_restore_test_artifacts"
+backup-scripts-location: 'backup_restore_test_artifacts'
 
 # Rancher Docker image version to use
-rancher-version: "v2.6-head"
+rancher-version: 'v2.6-head'
 
 # External Rancher endpoint
 #rancher-endpoint: 'https://127.0.0.1'
@@ -66,7 +67,7 @@ rancher-version: "v2.6-head"
 #rancher-admin-password: 'rancher_password'
 
 # Kubernetes version to use for Rancher integration tests
-kubernetes-version: "v1.24.8+rke2r1"
+kubernetes-version: 'v1.24.8+rke2r1'
 
 # Wait time for polling Rancher cluster status.
 rancher-cluster-wait-timeout: 7200
@@ -75,8 +76,8 @@ rancher-cluster-wait-timeout: 7200
 upgrade-prepare-dependence: False
 upgrade-sc-replicas: 3
 # If the value is empty, then skip the os version validation.
-upgrade-target-version: ""
-upgrade-iso-url: ""
-upgrade-iso-checksum: ""
+upgrade-target-version: ''
+upgrade-iso-url: ''
+upgrade-iso-checksum: ''
 # Based on the number of nodes, i.e., upgrade-wait-timeout * 3 nodes
 upgrade-wait-timeout: 7200
